# xCSS

./: .gitignore  CMakeLists.txt  README.md  colmap.yaml  color.py  install.sh  kapture_mast3r_mapping.py  launch.py  make_pairs.py  merge_videos.py  pyproject.toml  render_video.sh  setup.py  xcss.sh
mast3r/: demo_glomap.py
mast3r/colmap/: database.py  mapping.py
src/: CMakeLists.txt
tests/loader/: test_image_loader.py  test_video_loader.py
xcss/: __main__.py  config.py  datamanager.py  dataparser.py  dataset.py  framework.py  model.py  strategy.py
xcss/loader/: __init__.py  base.py  image.py  video.py
xcss/segmenter/: grounded_sam2.py
