[project]
name = "xcss"
version = "0.0.1"
description = "Extendable Crowd-Source Splatting (xCSS)"
authors = [
    {name="Runze Chen", email="chenrz925@icloud.com"}
]
requires-python = ">=3.9"
dependencies = [
    "dependency-injector>=4.0,<5.0"
]


[build-system]
requires = ["setuptools", "wheel", "cmake"]
build-backend = "setuptools.build_meta"